--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,36 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 2px 8px 8px 8px;
+  
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  margin-top: 8px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 12px;
+  margin-bottom: 8px;
 }
 
 .button-container {
+  display: block;
   background: #e3f4ff;
+  text-align: center;
+  padding: 8px;
 }
 
 button {
+  display: block;
   background: white;
   border: 1px solid #eee;
+  margin: 24px auto;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding: 8px 16px;
 }
