--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,35 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.top{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 12px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.top-left{
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.header{
+  font-size: 18px;
+  font-weight: 800;
+}
+
+.content{
+  margin-left: 65px;
+}
+
+.text{
+  margin-bottom: 16px;
+  max-width: 410px;
+}
+
+.buttons{
+  margin-bottom: 12px;
+}
